exploring more ways to get this data such as looking for repos with the extensions required config file gemini-extensions.json

--- a/config/config.json
+++ b/config/config.json
@@ -6,6 +6,9 @@
     "gemini-cli-extensions"
   ],
   "repositories": [],
+  "fileSearches": [
+    "gemini-extension.json"
+  ],
   "output": {
     "filename": "gemini-extensions.json"
   }
