Improve file search pagination and reorganize output structure
- Fix pagination bug in fileSearchScanner that incorrectly checked deduplicated repo count
- Add better logging with per-page progress for file searches
- Move timestamped output files to output/history/ subdirectory for cleaner organization
- Add _comments field to config.json documenting manually added repositories
- Add automateyournetwork/GeminiCLI_Vision_Extension to config (missing from GitHub code search)
- Update scanner to find 125 unique extensions (up from 124)

--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,18 @@
 {
+  "_comments": {
+    "repositories": [
+      "automateyournetwork/GeminiCLI_Vision_Extension - Added 2025-10-05: Not appearing in GitHub code search results despite having gemini-extension.json file"
+    ]
+  },
   "organizations": [
     "gemini-cli-extensions"
   ],
   "topics": [
     "gemini-cli-extensions"
   ],
-  "repositories": [],
+  "repositories": [
+    "automateyournetwork/GeminiCLI_Vision_Extension"
+  ],
   "fileSearches": [
     "gemini-extension.json"
   ],
