added ability to exclude specific repos if we want to cleanup data for some reason

--- a/config/config.json
+++ b/config/config.json
@@ -16,6 +16,9 @@
   "fileSearches": [
     "gemini-extension.json"
   ],
+  "excludedRepositories": [
+    "https://github.com/google-gemini/gemini-cli"
+  ],
   "output": {
     "filename": "gemini-extensions.json"
   }
